<resources>
    <string name="app_name">Parking_UES</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="or_login_with">O inicia sesión con</string>
    <string name="register_link">¿No tienes cuenta? Regístrate aquí</string>
    <string name="app_logo">Logo de ParkEase</string>
    <string name="active_parking_title">Tu estacionamiento activo:</string>
    <string name="recent_history">Historial reciente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">TU_CLIENT_ID_DE_FIREBASE</string>
</resources>